--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2"
   }
 }
